# usbc-fursuit-fan

./: README.md
CAD/: Head Fan Block.f3z  Head Fan Block.step
PCB/: ProDoc_Board1.epro
Schematic/: ProDoc_Schematic1.epro
fursuit-fan-controller-fw/: Cargo.toml  README.md  link-custom.x
fursuit-fan-controller-fw/.cargo/: config.toml
fursuit-fan-controller-fw/scripts/: mem_usage.py
fursuit-fan-controller-fw/src/: lib.rs  main.rs  persistence.rs  task.rs
fursuit-fan-controller-fw/src/task/: button_poll.rs  cc_detection.rs  dummy_pulse.rs  main.rs  persistence.rs
fursuit-fan-controller-fw/tests/: integration.rs
