[package]
authors = ["Ruben Anders <ruben.anders@robotty.de>"]
name = "fursuit-fan-controller-fw"
edition = "2024"
version = "1.0.0"
license = "MIT OR Apache-2.0"

[lib]
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
semihosting = "0.1"
embassy-executor = { version = "0.9", features = ["arch-spin", "executor-thread", "defmt"] }
embassy-stm32 = { version = "0.4", features = ["stm32f103c8", "defmt", "memory-x", "exti", "time", "time-driver-tim1"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures = "0.1"
debouncr = "0.2"
embassy-sync = { version = "0.7", features = ["defmt"] }
static_cell = "2"
#littlefs2 = { version = "0.6", default-features = false }
#embedded-storage = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 'full'
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 'full'
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 'full'
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 'full'
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
